# commr

./: Cargo.toml  README.md  mk-outs.sh
src/: main.rs
tests/: cli.rs
tests/expected/: file1_file2.123.i.out
