[package]
name = "commr"
version = "0.1.0"
edition = "2021"
authors = [ "Ken Youens-Clark <kyclark@gmail.com>" ]
readme = "README.md"
description = "Rust version of comm"
license-file = "LICENSE"
homepage = "https://github.com/kyclark/commr"
repository = "https://github.com/kyclark/commr"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
rand = "0.8.5"
